# matrixui-lib

./: .gitignore  CMakeLists.txt  README.md
cmake/imgui/: CMakeLists.txt  CMakeLists.txt.in
cmake/toolchains/: aarch64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
inc/: ImGuiApp.h  ImGuiWidget.h  MatrixPlot.h
inc/widget/: MatrixDebugWidget.h  OpenCVMatWidget.h  OpenGLCanvasWidget.h
src/: ImGuiApp.cpp  ImGuiWidget.cpp  MatrixPlot.cpp
src/widget/: MatrixDebugWidget.cpp  OpenCVMatWidget.cpp
